made logo on menu editable

--- a/src/components/site/templates/portfolio1/section/menu/menu.less
+++ b/src/components/site/templates/portfolio1/section/menu/menu.less
@@ -1,5 +1,8 @@
-.menu {
-
-/*less/css stuff can go in here*/
-
+.site-templates-portfolio1 {
+  .portfolio-menu {
+    .logo {
+      font-weight: bold;
+      font-size: 18px;
+    }
+  }
 }
