--- a/src/components/builder/builder.html
+++ b/src/components/builder/builder.html
@@ -66,7 +66,7 @@
         <!-- START Main section-->
         <section style="min-height: 995px;">
             <!-- START Page content-->
-            <div class="content-wrapper site-templates-{{currentTemplate}}">
+            <div class="content-wrapper site-templates-{{currentTemplate}} main-builder-area" style="overflow: visible;">
               <style>
                 {{content.field_custom_styles}}
               </style>
