--- a/src/components/site/aaa-home/home.html
+++ b/src/components/site/aaa-home/home.html
@@ -110,6 +110,9 @@
                                   <a href="/builder/{{page.id}}" title="Edit" style="text-decoration: none; margin-right: 3px;">
                                     <span class="fa fa-pencil"></span>
                                   </a>
+                                  <a href="/builder/{{page.id}}/clone" title="Clone" style="text-decoration: none; margin-right: 3px;">
+                                    <span class="fa fa-files-o"></span>
+                                  </a>
                                   <a href="#" ng-click="deletePage(page)" title="Delete" style="text-decoration: none; margin-right: 3px;">
                                     <span class="fa fa-trash"></span>
                                   </a>
