--- a/src/components/site/templates/portfolio1/section/footer/footer.less
+++ b/src/components/site/templates/portfolio1/section/footer/footer.less
@@ -1,5 +1,7 @@
-.footer {
-
-/*less/css stuff can go in here*/
-
+.site-templates-portfolio1 footer.footer .footer-social-icons a.add-social-icon {
+        border-radius: 0;
+        background-color: inherit;
+        width: auto;
+        color: #0f0;
+        font-weight: bold;
 }
