--- a/src/components/site/templates/portfolio1/section/cta/public.html
+++ b/src/components/site/templates/portfolio1/section/cta/public.html
@@ -1,10 +1,16 @@
 <div class="cta" ng-controller="SiteTemplatesPortfolio1SectionCtaController">
-	<footer class="footer">
+	<footer class="footer" style="background-color: {{section.settings.section_background_color}}; background-image: url('{{section.settings.section_background_image}}');">
     <div class="footer-top text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <p>Need Similar Project? <a href="#" class="btn btn-let-us-know text-uppercase">Let us Know</a></p>
+									<p>
+										 {{section.settings.text}}
+										 <a href="{{section.settings.button_url}}" ng-if="section.settings.show_button" class="btn btn-let-us-know text-uppercase"
+										 >
+											{{section.settings.button_text}}
+										 </a>
+									 </p>
                 </div>
             </div>
         </div>
