--- a/src/components/site/templates/portfolio1/section/footer/public.html
+++ b/src/components/site/templates/portfolio1/section/footer/public.html
@@ -1,31 +1,19 @@
 <div class="footer" ng-controller="SiteTemplatesPortfolio1SectionFooterController">
 	<!--start footer-->
-  <footer class="footer">
-      <div class="footer-top text-center">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-10 col-md-offset-1">
-                      <p>Need Similar Project? <a href="#" class="btn btn-let-us-know text-uppercase">Let us Know</a></p>
-                  </div>
-              </div>
-          </div>
-      </div>
+  <footer class="footer" style="background-color: {{section.settings.section_background_color}}; background-image: url('{{section.settings.section_background_image}}');">
       <div class="footer-bottom text-center">
           <div class="container">
               <div class="row">
                   <div class="col-md-10 col-md-offset-1">
-                      <p class="footer-address">
-                          239/2 North Kafrul<br>
-                          New York, NY 201890
+                      <p class="footer-address"
+                         style="line-height: 1;"
+                         ng-bind-html='safeHtml( section.settings.address.replace("\n", "<br />") )'>
                       </p>
                       <div class="footer-social-icons">
-                          <a href="#"><i class="fa fa-twitter"></i></a>
-                          <a href="#"><i class="fa fa-facebook-f"></i></a>
-                          <a href="#"><i class="fa fa-google-plus"></i></a>
-                          <a href="#"><i class="fa fa-linkedin"></i></a>
-                          <a href="#"><i class="fa fa-youtube-play"></i></a>
+                        <a href="{{icon.url}}" target="_blank" ng-repeat="icon in section.settings.social_icons"><i class="fa {{social_icons[icon.type]}}"></i></a>
                       </div>
-                      <div class="copy-right-text">&copy; 2016 NEON, Designed by <a href="#">ShapedTheme</a> in Bangladesh</div>
+                      <div class="copy-right-text"
+                           ng-bind-html="safeHtml( section.settings.copyright )"></div>
                   </div>
               </div>
           </div>
