--- a/src/components/site/templates/portfolio1/section/projects/configure.html
+++ b/src/components/site/templates/portfolio1/section/projects/configure.html
@@ -9,10 +9,13 @@
                       <span>
                           <a href="#" data-filter="*" class="current">All</a>
                           <a href="#" data-filter=".{{classify(category)}}"
-                             ng-repeat="category in section.settings.categories track by $index"
+                             ng-repeat="category in section.settings.categories"
                              config-settings
-                             no-show settings-function="editCategory"
-                             ng-model="category">
+                             settings="{'no-settings': true, 'no-show': true}"
+                             settings-function="editCategory"
+                             delete-function="removeCategory(category)"
+                             ng-model="category"
+                             editable-text="section.settings.categories[$index]" blur="submit" buttons="no">
                             {{category}}
                           </a>
                           <a href="#" style="font-weight:700;" ng-click="addCategory()">
@@ -25,7 +28,12 @@
               <div class="col-md-10 col-md-offset-1">
                 <div class="row">
                   <div class="portfolioContainer">
-                    <div class="col-md-4 col-sm-6 col-xs-12 {{classes(project.categories)}}" ng-repeat="project in section.settings.projects">
+                    <div class="col-md-4 col-sm-6 col-xs-12 {{classes(project.categories)}}" ng-repeat="project in section.settings.projects"
+                         config-settings
+                         settings="{'no-show': true}"
+                         settings-function="settings(projectSettings)"
+                         delete-function="removeItem(section.settings, 'projects', project)"
+                         ng-model="project">
                       <div class="st-work">
                         <a href="{{project.url}}" target="{{project.open_in_new_tab ? '_blank' : ''}}">
                           <img src="{{project.image_url}}" alt="">
