cta fully editable now

--- a/src/components/site/aaa-home/home.html
+++ b/src/components/site/aaa-home/home.html
@@ -16,7 +16,7 @@
           <!-- END navbar header-->
           <div class="nav-wrapper">
             <div class="pull-right" style="padding-top: 10px;">
-              <span class="fa fa-gear fa-2x pointer" ng-click="siteSettings()" style="cursor:pointer;"></span>
+              <span class="fa fa-gear fa-2x pointer" ng-click="settingsModal()" style="cursor:pointer;"></span>
               <a href="#" ng-click="logout()" style="margin-left: 15px; font-weight: 700; line-height: 28px; vertical-align: middle; margin-top: -10px; display: inline-block;">Log out</a>
             </div>
           </div>
