made portfolio footer editable

--- a/src/components/site/templates/portfolio1/section/footer/configure.html
+++ b/src/components/site/templates/portfolio1/section/footer/configure.html
@@ -19,7 +19,8 @@
                         <a href="#" ng-click="addIcon()" class="add-social-icon">+ Add Icon</a>
                       </div>
                       <div class="copy-right-text"
-                           ng-bind-html="safeHtml( section.settings.copyright )"></div>
+                           ng-bind-html="safeHtml( section.settings.copyright )"
+                           editable-textarea="section.settings.copyright" buttons="no" blur="submit"></div>
                   </div>
               </div>
           </div>
