--- a/src/components/site/templates/portfolio1/section/title/public.html
+++ b/src/components/site/templates/portfolio1/section/title/public.html
@@ -1,6 +1,6 @@
 <div class="title" ng-controller="SiteTemplatesPortfolio1SectionTitleController">
 	<!--start banner-->
-  <section class="banner home-banner" style="background-color: {{section.settings.section_background_color}}; background-image: url('{{section.settings.section_background_image}}');">
+  <section class="banner home-banner" style="padding: {{section.settings.padding}}px 0;background-color: {{section.settings.section_background_color}}; background-image: url('{{section.settings.section_background_image}}');">
     <div class="overlay" style="background-color: {{section.settings.overlay_color}};"></div>
     <div class="banner-text text-center text-uppercase">
       <div class="container">
