added some fcolor options

--- a/src/components/site/templates/portfolio1/section/projects/public.html
+++ b/src/components/site/templates/portfolio1/section/projects/public.html
@@ -21,10 +21,10 @@
                           <div class="col-md-4 col-sm-6 col-xs-12 {{classes(project.categories)}}" ng-repeat="project in section.settings.projects">
                               <div class="st-work">
                                 <a href="{{project.url}}" target="{{project.open_in_new_tab ? '_blank' : ''}}">
-                                  <img src="{{project.image_url}}" alt="">
+                                  <img src="{{project.image_url}}" alt="" style="height:216px;">
                                   <div class="overlay"></div>
                                 </a>
-                                <div class="work-overlay text-center">
+                                <div class="work-overlay text-center" style="opacity:1;">
                                   <!-- <a href="#" class="like-button">
                                     <i class="fa fa-heart-o"></i>
                                   </a> -->
