--- a/src/components/site/templates/portfolio1/section/projects/configure.html
+++ b/src/components/site/templates/portfolio1/section/projects/configure.html
@@ -36,10 +36,10 @@
                          ng-model="project">
                       <div class="st-work">
                         <a href="{{project.url}}" target="{{project.open_in_new_tab ? '_blank' : ''}}">
-                          <img src="{{project.image_url}}" alt="">
+                          <img src="{{project.image_url}}" alt="" style="height:216px;">
                           <div class="overlay"></div>
                         </a>
-                        <div class="work-overlay text-center">
+                        <div class="work-overlay text-center" style="opacity:1;">
                           <!-- <a href="#" class="like-button">
                             <i class="fa fa-heart-o"></i>
                           </a> -->
